# reef-imaging

./: .cursorignore  .cursorrules  .env-template  .gitignore  .gitmodules  MANIFEST.in  README.md  config_parameters.txt  configuration_HCS_v2.ini  docker-compose.yaml  pyproject.toml  requirements.txt  server.js
.github/workflows/: service_check.yml
docs/: index.html
reef_imaging/: README.md  automate_imaging_workflow.py  config.json  config_simulation.json  demo-async.ipynb  demo.ipynb  experiment_client.py  experiment_server.py  orchestrator.py  orchestrator_simulation.py  orchestrator_test.py  orchestrator_v2.py  robotic_arm_client.py  time_lapse_scan_test.py  try.ipynb  try.py  uc2_fucci_time_lapse_scan.py  uc2_fucci_time_lapse_scan_v2.py
reef_imaging/control/: README.md  README_mirror_services.md  mirror_services.py
reef_imaging/control/cytomat-control/: README.md  requirements.txt  samples.json  setup.sh  start_hypha_service_incubator.py  try.py
reef_imaging/control/dorna-control/: dorna_controller.py  dorna_controller_local.py  start_hypha_service.py  start_hypha_service_robotic_arm.py
reef_imaging/control/mirror-services/: README.md  README_LIVE_STITCHING.md  (+6 more)
reef_imaging/hypha_tools/: README.md  automated_stitch_uploader.py  automated_treatment_uploader.py  email_autorization.py  verify_hypha_zips.py
reef_imaging/lab_live_stream/: FYIR_camera.py  realsense_camera.py
reef_imaging/test/: hypha-test.py  test-squid-hypha.py  test-webrtc.py  test.html
reef_imaging/tools/: dorna_stress_test.py  hypha_storage.py
traefik/: docker-compose.yaml
(+52 files in other folders)
