[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "reef-imaging"
version = "0.1.0"
readme = "README.md"
description = "REEF Microscopy Imaging Farm Control Software"
dependencies = [
    "squid-control",
    "hypha-rpc==0.20.80",
    "watchdog==6.0.0",
    "logging==0.5.1",
    "numcodecs==0.13.1",
    "av==11.0.0",
    "aiortc==1.13.0",
]
[project.optional-dependencies]
all = [
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["reef_imaging*"]
exclude = ["tests*", "scripts*"]

[options.entry_points]
console_scripts = [
    "reef-imaging = reef_imaging.__main__:main",
]